# command-line-rust

./: .gitignore  .gitpod.yml  README.md  run_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: workflows.yml
01_hello/: Cargo.toml
01_hello/src/: main.rs
01_hello/tests/: cli.rs
02_echor/: Cargo.toml
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: lib.rs
03_catr/tests/expected/: the-bustle.txt.b.stdin.out  the-bustle.txt.n.stdin.out  the-bustle.txt.stdin.out
04_headr/: Cargo.toml
04_headr/src/: lib.rs
04_headr/tests/: cli.rs
05_wcr/: Cargo.toml
05_wcr/src/: lib.rs
05_wcr/tests/: cli.rs
06_uniqr/: Cargo.toml
06_uniqr/src/: lib.rs
07_findr/: Cargo.toml
07_findr/src/: lib.rs
07_findr/tests/: cli.rs
08_cutr/: Cargo.toml
08_cutr/src/: lib.rs
09_grepr/: Cargo.toml
09_grepr/src/: lib.rs
09_grepr/tests/: cli.rs
10_comm/: Cargo.toml
10_comm/src/: lib.rs
10_comm/tests/: cli.rs
11_tailr/: Cargo.toml
11_tailr/src/: lib.rs
11_tailr/tests/: cli.rs
12_fortuner/: Cargo.toml
12_fortuner/src/: lib.rs
13_calr/: Cargo.toml
13_calr/src/: lib.rs  main.rs
14_lsr/: Cargo.toml
14_lsr/src/: lib.rs  main.rs  owner.rs
14_lsr/tests/: cli.rs
