[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.5"
csv = "1.2.1"
regex = "1.8.1"

[dev-dependencies]
assert_cmd = "2.0.11"
cargo-tarpaulin = "0.25.2"
predicates = "3.0.3"
rand = "0.8.5"
