[package]
name = "grepr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.5"
regex = "1.8.1"
sys-info = "0.9.1"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
rand = "0.8.5"
