[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.7"
num = "0.4.0"
once_cell = "1.17.1"
regex = "1.8.1"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
rand = "0.8.5"
