[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = "4.2.7"
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
rand = "0.8.5"
